<resources>
    <string name="app_name">Results</string>

    <!-- UTAKMICE -->
    <string name="hint_match_status">FINISHED</string>
    <string name="hint_match_time">19:00</string>
    <string name="hint_match_day">MD: 35</string>
    <string name="hint_home_team">Home Team</string>
    <string name="hint_away_team">Away Team</string>
    <string name="hint_home_wins">2</string>
    <string name="hint_away_wins">1</string>
    <string name="hint_00">00</string>

    <!-- LIGA -->
    <string name="hint_competition">Premier League</string>
    <string name="hint_competition_image">League Logo</string>
    <string name="category_matches">Fixtures</string>
    <string name="category_standings">Standings</string>

    <!-- UTAKMICA -->
    <string name="squads">Squads</string>
    <string name="h2h">H2H</string>

    <!-- IGRAC -->
    <string name="hint_player_name">Jesse Lingard</string>
    <string name="hint_player_position">Midfielder</string>
    <string name="hint_player_no">1</string>

    <!-- TABLICA -->
    <string name="hint_team_position">1.</string>
    <string name="image_team_logo">Team Logo</string>
    <string name="hint_team_name">Manchester United</string>
    <string name="hint_team_played">35</string>
    <string name="hint_team_difference">76</string>
    <string name="hint_team_points">93</string>

    <!-- ALARM MANAGER -->
    <string name="game_time">Reminder! It\'s a game time!</string>


</resources>
