<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/players_custom_layout">

    <TextView
        android:id="@+id/text_player_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hint_player_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_player_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_player_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="14dp"
        android:text="@string/hint_player_name"
        app:layout_constraintBottom_toBottomOf="@+id/text_player_no"
        app:layout_constraintEnd_toStartOf="@+id/text_player_position"
        app:layout_constraintStart_toEndOf="@+id/text_player_no"
        app:layout_constraintTop_toTopOf="@+id/text_player_no" />


    <TextView
        android:id="@+id/text_player_position"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hint_player_position"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/text_player_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_player_name"
        app:layout_constraintTop_toTopOf="@+id/text_player_name" />

</androidx.constraintlayout.widget.ConstraintLayout>