<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp"/>

    <TextView
        android:id="@+id/text_table_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:text="@string/hint_team_position"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <ImageView
        android:id="@+id/image_team_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_shield"
        app:layout_constraintBottom_toBottomOf="@+id/text_table_position"
        app:layout_constraintEnd_toStartOf="@+id/guideline_logo"
        app:layout_constraintStart_toStartOf="@+id/guideline_position"
        app:layout_constraintTop_toTopOf="@+id/text_table_position" />

    <TextView
        android:id="@+id/text_team_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hint_team_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/image_team_logo"
        app:layout_constraintEnd_toStartOf="@+id/guideline_played"
        app:layout_constraintStart_toStartOf="@+id/guideline_logo"
        app:layout_constraintTop_toTopOf="@+id/image_team_logo" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="90dp" />

    <TextView
        android:id="@+id/text_team_played"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/hint_team_played"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/text_team_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_difference"
        app:layout_constraintStart_toStartOf="@+id/guideline_played"
        app:layout_constraintTop_toTopOf="@+id/text_team_name"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_difference"
        android:orientation="vertical"
        app:layout_constraintGuide_end="60dp" />

    <TextView
        android:id="@+id/text_team_difference"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/hint_team_difference"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/text_team_played"
        app:layout_constraintEnd_toStartOf="@+id/guideline_points"
        app:layout_constraintStart_toStartOf="@+id/guideline_difference"
        app:layout_constraintTop_toTopOf="@+id/text_team_played" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/text_team_points"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/hint_team_points"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/text_team_difference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_points"
        app:layout_constraintTop_toTopOf="@+id/text_team_difference" />

</androidx.constraintlayout.widget.ConstraintLayout>